@@ -1,3 +1,7 @@
+2010-01-06  Ian Beckwith  <ianb@erislabs.net>
+
+	* surfraw.1.IN: document new config locations.
+
 2009-11-20  Ian Beckwith  <ianb@erislabs.net>
 
 	* test/Makefile.am: Add missing tests to EXTRA_DIST.
